// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`instantiates 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": Array [
          /\\\\\\.module\\.s\\?css\\$/,
        ],
        "test": /\\\\\\.s\\?css\\$/,
        "use": Array [
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/css-hot-loader/index.js",
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/extract-text-webpack-plugin/dist/loader.js",
            "options": Object {
              "omit": 1,
              "remove": true,
            },
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/style-loader/index.js",
            "options": Object {
              "hmr": true,
            },
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/css-loader/index.js",
            "options": Object {
              "importLoaders": 0,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.module\\.s\\?css\\$/,
        "use": Array [
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/css-hot-loader/index.js",
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/extract-text-webpack-plugin/dist/loader.js",
            "options": Object {
              "omit": 1,
              "remove": true,
            },
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/style-loader/index.js",
            "options": Object {
              "hmr": true,
            },
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/css-loader/index.js",
            "options": Object {
              "importLoaders": 0,
              "modules": true,
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [
    ExtractTextPlugin {
      "filename": "[name].css",
      "id": 1,
      "options": Object {
        "allChunks": true,
        "ignoreOrder": true,
      },
    },
    ExtractTextPlugin {
      "filename": "[name].css",
      "id": 2,
      "options": Object {
        "allChunks": true,
        "ignoreOrder": true,
      },
    },
  ],
}
`;

exports[`instantiates with options 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "exclude": Array [
          /\\\\\\.module\\.s\\?css\\$/,
        ],
        "test": /\\\\\\.s\\?css\\$/,
        "use": Array [
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/css-hot-loader/index.js",
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/extract-text-webpack-plugin/dist/loader.js",
            "options": Object {
              "omit": 1,
              "remove": true,
            },
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/style-loader/index.js",
            "options": Object {
              "hmr": true,
              "sourceMap": true,
            },
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/css-loader/index.js",
            "options": Object {
              "importLoaders": 0,
              "modules": true,
            },
          },
        ],
      },
      Object {
        "test": /\\\\\\.module\\.s\\?css\\$/,
        "use": Array [
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/css-hot-loader/index.js",
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/extract-text-webpack-plugin/dist/loader.js",
            "options": Object {
              "omit": 1,
              "remove": true,
            },
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/style-loader/index.js",
            "options": Object {
              "hmr": true,
              "sourceMap": true,
            },
          },
          Object {
            "loader": "/projects/neutrino-middlewares/node_modules/css-loader/index.js",
            "options": Object {
              "importLoaders": 0,
              "modules": true,
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [
    ExtractTextPlugin {
      "filename": "[name].css",
      "id": 3,
      "options": Object {
        "allChunks": true,
        "ignoreOrder": true,
      },
    },
    ExtractTextPlugin {
      "filename": "[name].css",
      "id": 4,
      "options": Object {
        "allChunks": true,
        "ignoreOrder": true,
      },
    },
  ],
}
`;
